--- a/learning-javascript.html
+++ b/learning-javascript.html
@@ -27,13 +27,16 @@
 		</div>
 		<div>
 			<h2>Exercice 3 : Automating Repetitive Tasks</h2>
-			<p>Using a <span class="code">for</span> loop</p>
+			<p>Using a <span class="code">for</span> loop with a primitive shape</p>
 			<canvas id="Canvas3"></canvas>
+			<br><br>
+			<p>Using a <span class="code">for</span> loop with an array list</p>
+			<p id="planets"></p>
 		</div>
 		<div>
 			<h2>Exercice 4 : User Input</h2>
 			<p>Using a <span class="code">tool</span> object</p>
-			<p>Click anywhere inside the purple square. Every time you click, you'll create a circle!<br />Refresh the page to erase all the squares.</p>
+			<p>Click anywhere inside the purple square. Every click creates a circle<br />Refreshing the page will remove all the circles.</p>
 			<canvas id="Canvas4"></canvas>
 		</div>
 		<div style="display: none;">
