--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="" type="image/x-icon">
-    
+
     <!-- import the main stylesheet -->
     <link rel="stylesheet" href="css/my-page-styles.css">
-    
-  </head>  
+
+  </head>
   <body>
     <header class="header">
-      <h1>Samuel Martin</h1>
-      <p class="role">The Sandbox Page<br/></p>
+      <h1>Samuel Martin's Sandbox</h1>
+      <P><button class="role" onclick="location.reload();">Refresh page to load random images<br/></p>
         <img class="avatar" alt="avatar" src="images/sam-biopic-2020-gray72.jpg" />
     </header>
     <section class="section about">
@@ -35,7 +35,7 @@
     </section>
     <section class="section skills">
         <div class="content-wrapper">
-            <h2>Skills</h2>
+            <h2 style="color:white;">Skills</h2>
             <ul class="skills-list">
                 <li class="skill-item">HTML</li>
                 <li class="skill-item">CSS</li>
@@ -51,7 +51,7 @@
             <h2>Education</h2>
                 <div class="row">
                     <div class="column third education-item">
-                        <img alt="" class="" src="https://loremflickr.com/280/140/videocamera" />
+                        <img alt="" class="" src="https://loremflickr.com/280/140/cameralense" />
                         <h3>Concordia University</h3>
                         <p>2009 BFA Film Animation Major with Honors, Mel Hoppenheim  School of Cinema</p>
                     </div>
@@ -61,18 +61,18 @@
                         <p>2000 Creative Arts</p>
                     </div>
                     <div class="column third education-item">
-                        <img alt="" class="" src="https://loremflickr.com/280/140/karate" />
+                        <img alt="" class="" src="https://loremflickr.com/280/140/mountain" />
                         <h3>School of Hard Knocks</h3>
-                        <p>Jobs, Travels, Autonomous Education and The Good Life.</p>
+                        <p>Freelance, Travels, Autonomous Education and The Good Life.</p>
                     </div>
-                </div>    
+                </div>
             </div>
         </div>
     </section>
     <footer class="">
         <div class="legal">
             <ul class="social-links">
-                <li class=""><a href="https://www.linkedin.com/in/splambo/" target="_blank">LinkedIn</a></li>
+                <li class=""><a href="https://www.linkedin.com/in/splambo/" target="_blank">LinkedIn</a>&nbsp;</li>
                 <li class=""><a href="https://github.com/smartin" target="_blank">GitHub</a></li>
             </ul>
             <p class="copyright">&copy;&nbsp;<script type="text/JavaScript">document.write(new Date().getFullYear());</script> Samuel Martin</p>
